k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik
  rules:
  - host: halloween.dev.summershome.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80
  tls:
  - hosts:
    - halloween.dev.summershome.duckdns.org
    secretName: dev-halloween-summershome-duckdns-org-tls
